--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,11 +26,15 @@
         <filter-name>encodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    
+
     <filter>
         <filter-name>jspglq</filter-name>
-        <filter-class></filter-class>
+        <filter-class>com.mogul.interception.LoginFilter</filter-class>
     </filter>
+    <filter-mapping>
+        <filter-name>jspglq</filter-name>
+        <url-pattern>/workbench/*</url-pattern>
+    </filter-mapping>
 
     <!-- spring mvc核心：分发servlet -->
     <servlet>
