--- a/pom.xml
+++ b/pom.xml
@@ -180,13 +180,17 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.7.3</version>
     </dependency>
-
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+    <!--jsr303-->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>5.3.6.Final</version>
     </dependency>
   </dependencies>
 
