--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,9 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
+    <listener>
+        <listener-class>com.mogul.listener.ListenerContext</listener-class>
+    </listener>
 
     <!--编码过滤器-->
     <filter>
@@ -27,12 +30,20 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+<!--    <filter>-->
+<!--        <filter-name>jspglq</filter-name>-->
+<!--        <filter-class>com.mogul.interception.LoginFilter</filter-class>-->
+<!--    </filter>-->
+<!--    <filter-mapping>-->
+<!--        <filter-name>jspglq</filter-name>-->
+<!--        <url-pattern>/workbench/*</url-pattern>-->
+<!--    </filter-mapping>-->
     <filter>
-        <filter-name>jspglq</filter-name>
-        <filter-class>com.mogul.interception.LoginFilter</filter-class>
+        <filter-name>loginFilter</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>jspglq</filter-name>
+        <filter-name>loginFilter</filter-name>
         <url-pattern>/workbench/*</url-pattern>
     </filter-mapping>
 
@@ -45,11 +56,12 @@
             <param-name>contextConfigLocation</param-name>
             <param-value>classpath:springMVC.xml</param-value>
         </init-param>
-        <load-on-startup>1</load-on-startup>
+        <load-on-startup>0</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>mvc-dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
 
 </web-app>
