--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,12 @@
       <artifactId>hibernate-validator</artifactId>
       <version>5.3.6.Final</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <build>
